force-app/main/default/objects/Registration__c/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <formula>Budget__c - Total_Registration_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>