force-app/main/default/objects/Registration__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>Total_Registration_Revenue__c / Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>