force-app/main/default/objects/Registration__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
            </value>
            <value>
                <fullName>Pharm Tech</fullName>
            </value>
            <value>
                <fullName>RFG</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Spotlight Sessions</fullName>
            </value>
            <value>
                <fullName>Exhibits</fullName>
            </value>
            <value>
                <fullName>Satellite Symposia</fullName>
            </value>
            <value>
                <fullName>Meeting Space</fullName>
            </value>
            <value>
                <fullName>Door Drops</fullName>
            </value>
            <value>
                <fullName>Hotel Rebates</fullName>
            </value>
            <value>
                <fullName>Refunds and Cancellations</fullName>
            </value>
            <value>
                <fullName>Active - Comp</fullName>
            </value>
            <value>
                <fullName>Associate - Comp</fullName>
            </value>
            <value>
                <fullName>Non Member - Comp</fullName>
            </value>
            <value>
                <fullName>Exhibitor Full Conference</fullName>
            </value>
            <value>
                <fullName>Exhibitor - Booth Personnel (comp)</fullName>
            </value>
            <value>
                <fullName>Other Comp</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Navigating the Weight of Change</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>