force-app/main/default/objects/Registration__c/fields/Total_of_Comps__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Comps__c</fullName>
    <label>Total # of Comps</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>