force-app/main/default/objects/Registration__c/fields/Total_Registration_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Registration_Revenue__c</fullName>
    <label>Total Registration Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>