force-app/main/default/objects/Registration__c/fields/Weekly_of_Comps__c.field-meta.xml
<CustomField>
    <fullName>Weekly_of_Comps__c</fullName>
    <label>Weekly # of Comps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>