force-app/main/default/objects/Registration__c/fields/Weekly_Registration_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Registration_Revenue__c</fullName>
    <label>Weekly Registration Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>